# QuarryCore

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  BENCHMARK.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  PIPELINE_IMPLEMENTATION_SUMMARY.md  PIPELINE_VALIDATION_COMPLETE.md  README.md  SECURITY.md  config.example.yaml  main.py  pyproject.toml  requirements.txt  requirements_py310.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  comprehensive-ci.yml
benchmarks/: __init__.py  baseline.json  benchmark_results.json  compare.py  profile_1k_urls.py
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: checkpointing.md  dedup.md  gpu_quality_assessment.md  testing.md
k8s/production/: deployment.yaml
scripts/: phase2_verify.py  regenerate_benchmark.py  smoke_run.py  test_runner.py
src/quarrycore/: __init__.py  cli.py  container.py  pipeline.py  protocols.py
src/quarrycore/auth/: __init__.py  api_keys.py  jwt_manager.py  middleware.py  models.py
src/quarrycore/backup/: enterprise_dr.py
src/quarrycore/config/: __init__.py  config.py
src/quarrycore/crawler/: __init__.py  adaptive_crawler.py  circuit_breaker.py  http_client.py  rate_limiter.py  robots_parser.py  user_agents.py
src/quarrycore/dataset/: __init__.py  analytics.py  chunker.py  constructor.py  exporter.py  formatter.py  sampler.py
src/quarrycore/dedup/: __init__.py  canonical.py  hash_db.py  hybrid_dedup.py  minhash_redis.py
src/quarrycore/deduplicator/: __init__.py  bloom_filter.py  deduplicator.py  fuzzy_matcher.py  minhash_lsh.py  semantic_dedup.py
src/quarrycore/extractor/: __init__.py  cascade_extractor.py  confidence_scorer.py  content_processors.py  domain_extractors.py  language_detector.py  manager.py  models.py  protocols.py  readability_extractor.py  soup_extractor.py  trafilatura_extractor.py
src/quarrycore/metadata/: __init__.py  author_extractor.py  content_analyzer.py  date_extractor.py  dom_analyzer.py  metadata_extractor.py  quality_scorer.py  social_metrics_extractor.py  structured_data_parser.py
src/quarrycore/monitoring/: __init__.py  audit.py  business_metrics.py  tracing.py
src/quarrycore/monitoring/enterprise/: business_metrics.py
src/quarrycore/observability/: __init__.py  logging.py  manager.py  metrics.py
src/quarrycore/performance/: enterprise_optimization.py
src/quarrycore/quality/: __init__.py  assessor.py  grammar_scorer.py  heuristic_scorer.py  lexical_scorer.py  neural_scorer.py  quality_assessor.py  scorer.py  scorers.py
src/quarrycore/recovery/: __init__.py  circuit_breaker.py  dead_letter.py  dead_letter_service.py
src/quarrycore/security/: __init__.py  enterprise_security.py  headers.py  rate_limiter.py  validation.py
src/quarrycore/storage/: __init__.py  parquet_store.py  schema.py  sqlite_manager.py  storage_manager.py
src/quarrycore/testing/enterprise/: chaos_engineering.py  load_testing.py
src/quarrycore/tests/: __init__.py  dummy_app.py
src/quarrycore/utils/: __init__.py  atomic.py  slugify.py
src/quarrycore/web/: __init__.py  main.py
src/quarrycore/web/templates/: index.html
test-checkpoints/: 136b3d5e-f609-4949-a0aa-810fd1f20fa5.json  180540a0-18f2-44d5-bbe1-38151a64bb01.json  18595459-2bb8-4b8a-a931-d60647f16c7b.json  19c0809e-9436-4607-a5dc-2f8943e3984b.json  1da15c4f-98e2-4bfb-a560-06bdedd5aa44.json  428daf7d-f744-4291-b06e-687f24d7a0a7.json  4d607006-4fd3-49b9-926e-6b96d7ff9f48.json  51761e11-537c-4df7-b7b8-b2b45413f670.json  56b858de-0d97-40ca-bd68-48c73445e5eb.json  7e4cc9bb-0589-4ec9-a4a7-198e34b87caa.json  9f7a511a-05f8-4fff-b0c9-3b8dfec37fa4.json  af68fe3f-df33-407b-a57d-1f19176515b0.json  b79abcab-a7c2-4463-93fe-03f6ec2da2ce.json  baa03310-e824-4607-9345-f6ffe5f05226.json  c4cab859-d8d0-402b-a069-ff7c66f31e0a.json  c65655c4-477a-4842-9e2a-b1fb64cf209e.json  ddd6f30c-422d-4cf1-8231-9a0a06db029c.json  e4916e9e-99b8-497a-9266-7edc629c0d8f.json  f6d64025-a8ef-4da5-b6a4-b45301bb7577.json
tests/: __init__.py  conftest.py  test_cascade_extractor.py  test_crawler.py  test_crawler_comprehensive.py  test_deadlock_minimal_repro.py  test_deduplication.py  test_extractor.py  test_metadata.py  test_performance_benchmarks.py  test_production_integration.py  test_quality.py  test_security_comprehensive.py  test_storage.py
tests/e2e/: __init__.py  test_pipeline_resume_full.py  test_resume.py
tests/health/: __init__.py  test_cov_branch_mode.py
tests/helpers/: __init__.py  metric_delta.py
tests/integration/: __init__.py  test_crawler_pipeline_e2e.py  test_dataset_export.py  test_extraction_pipeline.py  test_quality_gpu_integration.py  test_signal_graceful.py
tests/performance/: test_quality_gpu_perf.py
tests/unit/: __init__.py  test_atomic_cleanup.py  test_atomic_json.py  test_atomic_utils.py  test_backoff_registry.py  test_backoff_registry_cleanup.py  test_benchmark_compare.py  test_canonical_html.py  test_container_advanced.py  test_container_coverage_boost.py  test_container_paths.py  test_dead_letter.py  test_http_client_advanced.py  test_http_client_branches.py  test_http_client_coverage_boost.py  test_http_client_proxies.py  test_http_client_retry.py  test_http_client_robots.py  test_http_client_targeted_coverage.py  test_metrics_histogram.py  test_pipeline.py  test_pipeline_shutdown.py  test_signal_handler.py  test_storage_sqlite.py  test_utils.py
tests/unit/extractor/: __init__.py  test_manager.py  test_readability_extractor.py  test_soup_extractor.py  test_trafilatura_extractor.py
tests/unit/quality/: test_scoring.py  test_transformer_gpu.py
